# sentinel-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  file.txt  node.crt  node.key
.github/workflows/: ci.yml
.sentinel/: identity.key  node.crt  node.key
.sentinel/storage.db/: db
certs/: ca.crt  ca.key  server.crt  server.key
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: frame.gitignore  frame.rs
crates/sentinel-crypto/: Cargo.toml
crates/sentinel-crypto/src/: lib.rs
crates/sentinel-node/: Cargo.toml
crates/sentinel-node/src/: discovery.rs  engine.rs  handlers.rs  main.rs
crates/sentinel-protocol/: Cargo.toml
crates/sentinel-protocol/src/: codec.rs  error.rs  frame.gitignore  frame.rs  lib.rs  messages.rs
crates/sentinel-protocol/src/commands/: commands.rs  mod.rs
crates/sentinel-transport/: Cargo.toml
crates/sentinel-transport/src/: acceptor.gitignore  acceptor.rs  connector.rs  error.rs  lib.rs  state.rs  tcp.rs  tls.rs  tls_config.rs
crates/server/: Cargo.toml
crates/server/src/: engine.rs  main.rs  metrics.rs  router.rs
crates/server/src/handlers/: chat.rs  file_transfer.rs  media.rs  mod.rs  sys_info.rs
crates/transport/: Cargo.toml
crates/transport/src/: acceptor.gitignore  acceptor.rs  error.rs  lib.rs  metrics.rs  state.rs  tcp.rs  tls.rs  tls_config.rs
docs/: architecture.md  protocol.md
scripts/: gen-certs.sh
