[workspace]
resolver = "2"
members = [
    "crates/sentinel-transport",
    "crates/sentinel-protocol",
    "crates/server",
    "crates/client",
    "crates/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abdulrahman Hassan <hassantech.1111@gmail.com>"]

[workspace.dependencies]
sentinel-transport = { path = "crates/sentinel-transport" }
sentinel-protocol = { path = "crates/sentinel-protocol" }
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.25"
rustls = { version = "0.22", default-features = false, features = ["ring", "logging", "tls12"] }
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }