[package]
name = "sentinel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-transport = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
uuid = { version = "1.0", features = ["v4"] }