[package]
name = "sentinel-protocol"
version = "0.1.0"
edition = "2021"
authors = ["rusty-radon"]
description = "Binary framing and codec implementation for the Sentinel protocol"

[dependencies]
bytes = "1.9"

tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.42", features = ["sync"] }

crc32fast = "1.4"

thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }