[package]
name = "sentinel-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
