[package]
name = "sentinel-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sentinel-crypto = { path = "../sentinel-crypto" }
sentinel-transport = { path = "../sentinel-transport" }
sentinel-protocol = { path = "../sentinel-protocol" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
