[package]
name = "sentinel-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sentinel-crypto = { path = "../sentinel-crypto" }
sentinel-transport = { path = "../sentinel-transport" }
sentinel-protocol = { path = "../sentinel-protocol" }
tokio = { version = "1.0", features = ["full", "sync"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
bincode = "1.3.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
rustls = { workspace = true, features = ["aws_lc_rs"] }
mdns-sd = "0.17.2"
uuid = { version = "1.20.0", features = ["v4"] }
dashmap = "6.1.0"
bytes.workspace = true
lru = "0.12"
