[package]
name = "sentinel-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { workspace = true }
futures = "0.3"
crc32fast = "1.4"
thiserror = { workspace = true }
async-trait = { workspace = true }