[package]
name = "sentinel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-transport = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
clap = { workspace = true }
async-trait = { workspace = true }
sysinfo = "0.30"