
[package]
name = "sentinel-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1" # Standard for trait-based async